# cyrene

./: CHANGELOG.md  Cargo.toml  README.md  cyrene.toml  dist-workspace.toml
cyrene/: Cargo.toml
cyrene/src/: app.rs  config.rs  dirs.rs  errors.rs  lockfile.rs  main.rs  manager.rs  responses.rs  tables.rs  transaction.rs  util.rs  version.rs  versions_cache.rs
cyrene/src/app_module/: env.rs  mod.rs  modify.rs  post_install.rs  sources.rs  strings.rs  versions.rs
