[package]
name = "cyrene"
description = "Manage locally installed binaries"
version = "0.3.0"
edition = "2024"
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
directories = "6.0.0"
env_logger = "0.11.8"
flate2 = "1.1.2"
indicatif = "0.18.0"
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
regex = "1.12.3"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls","json"] }
rune = "0.14.1"
rune-modules = { version = "0.14.1", features = ["http", "json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
shlex = "1.3.0"
symlink = "0.1.0"
tabled = "0.20.0"
tar = "0.4.44"
tempfile = "3.25.0"
thiserror = "2.0.17"
toml = "0.9.7"
xz = "0.1.0"
zip = "8.1.0"
