[package]
name = "cyrene"
description = "Manage locally installed binaries"
version = "0.4.0"
edition = "2024"
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-compression = { version = "0.4.40", features = ["futures-io", "gzip", "xz", "xz-parallel"] }
async-tar = { version = "0.6.0", features = ["tokio"] }
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
directories = "6.0.0"
env_logger = "0.11.9"
futures = "0.3.32"
futures-util = "0.3.32"
indicatif = { version = "0.18.4", features = ["futures", "tokio"] }
jsonpath-rust = "1.0.4"
log = "0.4.29"
miette = { version = "7.6.0" , features = ["fancy"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symlink = "0.1.0"
tabled = "0.20.0"
tar = "0.4.44"
tempfile = "3.25.0"
text-template = "0.1.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
toml = "1.0.3"
url = { version = "2.5.8", features = ["serde"] }
zip = "8.1.0"
